<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/min_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/min_val"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="24sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/percentSeekBar"
        android:layout_width="104dp"
        android:layout_height="37dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/max_val"
        android:layout_toEndOf="@+id/min_val"
        android:indeterminate="false"
        android:max="10"
        android:progress="5" />

    <TextView
        android:id="@+id/valC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="196dp"
        android:layout_marginTop="47dp"
        android:text="@string/val_chosen"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/max_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/max_val"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>